<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">News App</string>
    <string name="no_news">No recent news found. </string>
    <string name="no_internet">No internet found. </string>

    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News Settings</string>

    <string name="settings_section_label">Section Keyword</string>
    <string name="settings_section_key" translatable="false">section</string>
    <string name="settings_section_default" translatable="false">technology</string>

    <string name="settings_query_label">Query Keyword</string>
    <string name="settings_query_key" translatable="false">query</string>
    <string name="settings_query_default" translatable="false">android</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_newest_value</string>

    <!-- Label for order-by newest option [CHAR LIMIT=20] -->
    <string name="settings_order_by_newest_label">Newest</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>

    <!-- Label for order-by relevance option [CHAR LIMIT=20] -->
    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>
</resources>